[gd_scene load_steps=30 format=3 uid="uid://4viiqcwnkguk"]

[ext_resource type="Script" uid="uid://cf1e5h4b5lu3u" path="res://scripts/systems/EncounterController.gd" id="1_qvqnh"]
[ext_resource type="Texture2D" uid="uid://bktohjhiu4ph0" path="res://art/Worlds/Frozen/Mountain/2.png" id="2_imtto"]
[ext_resource type="PackedScene" uid="uid://cai81qjmmgokj" path="res://scenes/arena/AscensionCharge.tscn" id="2_n8wkn"]
[ext_resource type="PackedScene" uid="uid://ccrejlifa6gwm" path="res://scenes/enemies/EnemyKnightAdd.tscn" id="3_61woi"]
[ext_resource type="Texture2D" uid="uid://63ivall1yxf2" path="res://art/Worlds/Frozen/Mountain/1.png" id="3_ej262"]
[ext_resource type="PackedScene" uid="uid://deotiruix5irf" path="res://scenes/enemies/EnemySkeletonGolem.tscn" id="3_golem"]
[ext_resource type="PackedScene" uid="uid://3n3mym4g3" path="res://scenes/enemies/EnemySkeletonMage.tscn" id="3_mage"]
[ext_resource type="PackedScene" uid="uid://bq7m3x5k8npwj" path="res://scenes/enemies/EnemyNecromancer.tscn" id="3_necro"]
[ext_resource type="PackedScene" uid="uid://cjteqkv3dbcyl" path="res://scenes/enemies/EnemyRogueSkeleton.tscn" id="3_rogue"]
[ext_resource type="Texture2D" uid="uid://c4jpyk7ridn4n" path="res://art/Worlds2/Winter/Background/Background_02.png" id="4_kagm6"]
[ext_resource type="Script" uid="uid://kl22l7l8p1rd" path="res://scripts/systems/FloorProgressionController.gd" id="4_yjglx"]
[ext_resource type="Texture2D" uid="uid://bu71lu0wv2orc" path="res://art/Worlds/cave/background/wall bg.png" id="5_gp4b6"]
[ext_resource type="Texture2D" uid="uid://gn14x0w5sb8" path="res://art/Worlds/winter/Background/05 1.png" id="5_jrlyj"]
[ext_resource type="PackedScene" uid="uid://dlbxvu5p3c25n" path="res://scenes/world/RewardChest.tscn" id="5_mi5e1"]
[ext_resource type="Texture2D" uid="uid://di2c413mbri0w" path="res://art/Worlds/cave/background/bg1.png" id="6_1srhu"]
[ext_resource type="Script" uid="uid://c34rst6nb4hnx" path="res://scripts/enemies/FloorEnemySpawner.gd" id="6_imtto"]
[ext_resource type="PackedScene" uid="uid://0hu6af2x3pya" path="res://scenes/arena/Arena1.tscn" id="7_ej262"]
[ext_resource type="Texture2D" uid="uid://bb1t0njuokf2p" path="res://art/Worlds/cave/background/filter2.png" id="7_usd6y"]
[ext_resource type="Texture2D" uid="uid://dcdruorr6jr2i" path="res://art/Worlds/cave/background/filter.png" id="8_6fyig"]
[ext_resource type="Texture2D" uid="uid://cxf8dpn8n53sw" path="res://art/Worlds/cave/background/bg2.png" id="9_thmre"]
[ext_resource type="Texture2D" uid="uid://1bn08fcfrknt" path="res://art/Worlds/cave/background/bg3.png" id="10_80gak"]
[ext_resource type="Texture2D" uid="uid://bdxnoandgpfjy" path="res://art/Worlds/winter/Background/Ice.png" id="11_alxcq"]
[ext_resource type="PackedScene" uid="uid://c72m65e63bs0o" path="res://scenes/player/player.tscn" id="12_gp4b6"]
[ext_resource type="PackedScene" uid="uid://b6qbnom4vba8g" path="res://scenes/boss/Boss_World1.tscn" id="13_1srhu"]
[ext_resource type="PackedScene" uid="uid://ojpp3p46grti" path="res://scenes/arena/AscensionSocket.tscn" id="14_usd6y"]
[ext_resource type="PackedScene" uid="uid://da2fr6n8vi4x7" path="res://scenes/ui/UI.tscn" id="16_thmre"]
[ext_resource type="Resource" uid="uid://dtfg2ntfkn5oa" path="res://styles/HUDStyle.tres" id="17_80gak"]
[ext_resource type="PackedScene" uid="uid://cxsb0sxvfl0t" path="res://scenes/ui/DiceModifierChoice.tscn" id="18_alxcq"]
[ext_resource type="Texture2D" uid="uid://bvgmbdv5b177f" path="res://art/particles/light_01_a.png" id="19_snowtx"]

[node name="World1" type="Node2D"]

[node name="BackgroundF1-F2" type="Node2D" parent="."]
z_index = -10

[node name="Back" type="Parallax2D" parent="BackgroundF1-F2"]
scale = Vector2(2, 2)
scroll_scale = Vector2(0.08, 0)
scroll_offset = Vector2(-6, -546)
repeat_size = Vector2(1334, 0)
repeat_times = 7
follow_viewport = false

[node name="Stars" type="Sprite2D" parent="BackgroundF1-F2/Back"]
position = Vector2(131, 121)
texture = ExtResource("4_kagm6")

[node name="Far" type="Parallax2D" parent="BackgroundF1-F2"]
scale = Vector2(1.5, 1.5)
scroll_scale = Vector2(0.04, 0)
scroll_offset = Vector2(-36, -618)
repeat_size = Vector2(2688, 0)
repeat_times = 5
follow_viewport = false

[node name="Bg11" type="Sprite2D" parent="BackgroundF1-F2/Far"]
position = Vector2(-47, 1029)
texture = ExtResource("2_imtto")

[node name="Mid" type="Parallax2D" parent="BackgroundF1-F2"]
scale = Vector2(1.5, 1.5)
scroll_scale = Vector2(0.06, 0)
scroll_offset = Vector2(25, -793)
repeat_size = Vector2(2688, 0)
repeat_times = 7
follow_viewport = false

[node name="Bg2" type="Sprite2D" parent="BackgroundF1-F2/Mid"]
position = Vector2(0, 1090.667)
texture = ExtResource("3_ej262")

[node name="Near" type="Parallax2D" parent="BackgroundF1-F2"]
visible = false
scale = Vector2(1.5, 1.5)
scroll_scale = Vector2(0.1, 0)
scroll_offset = Vector2(-57, -347)
repeat_size = Vector2(1280, 0)
repeat_times = 3
follow_viewport = false

[node name="Bg3" type="Sprite2D" parent="BackgroundF1-F2/Near"]
position = Vector2(0, 929.333)
texture = ExtResource("5_jrlyj")

[node name="BackgroundF3-F5" type="Node2D" parent="."]
z_index = -10
position = Vector2(50736, 11670)

[node name="Back2" type="Parallax2D" parent="BackgroundF3-F5"]
scale = Vector2(5, 5)
scroll_scale = Vector2(0, 0)
scroll_offset = Vector2(-2544, -580.99994)
repeat_size = Vector2(1456, 0)
repeat_times = 7
follow_viewport = false

[node name="WallBg" type="Sprite2D" parent="BackgroundF3-F5/Back2"]
position = Vector2(-177.5, 238)
texture = ExtResource("5_gp4b6")

[node name="Back" type="Parallax2D" parent="BackgroundF3-F5"]
scale = Vector2(3, 3)
scroll_scale = Vector2(0.08, 0)
scroll_offset = Vector2(-2236, -86)
repeat_size = Vector2(2165, 0)
repeat_times = 7
follow_viewport = false

[node name="bg1" type="Sprite2D" parent="BackgroundF3-F5/Back"]
position = Vector2(131, 121)
texture = ExtResource("6_1srhu")

[node name="Filter" type="Parallax2D" parent="BackgroundF3-F5"]
scale = Vector2(3, 3)
scroll_scale = Vector2(0, 0)
scroll_offset = Vector2(-2381, -2516)
repeat_size = Vector2(1920, 0)
repeat_times = 6

[node name="Filter2" type="Sprite2D" parent="BackgroundF3-F5/Filter"]
position = Vector2(-242, 1102.5)
texture = ExtResource("7_usd6y")

[node name="Filter" type="Sprite2D" parent="BackgroundF3-F5/Filter"]
position = Vector2(760.00006, 904)
texture = ExtResource("8_6fyig")

[node name="Far" type="Parallax2D" parent="BackgroundF3-F5"]
scale = Vector2(3, 3)
scroll_scale = Vector2(0.04, 0)
scroll_offset = Vector2(185, -2708)
repeat_size = Vector2(2163, 0)
repeat_times = 7
follow_viewport = false

[node name="Bg11" type="Sprite2D" parent="BackgroundF3-F5/Far"]
position = Vector2(-47, 1029)
texture = ExtResource("9_thmre")

[node name="Mid" type="Parallax2D" parent="BackgroundF3-F5"]
scale = Vector2(1.5, 1.5)
scroll_scale = Vector2(0.06, 0)
scroll_offset = Vector2(-3153, -1168)
repeat_size = Vector2(2112, 0)
repeat_times = 7
follow_viewport = false

[node name="Bg2" type="Sprite2D" parent="BackgroundF3-F5/Mid"]
position = Vector2(6.666667, 1196.0004)
scale = Vector2(2, 2)
texture = ExtResource("10_80gak")

[node name="Near" type="Parallax2D" parent="BackgroundF3-F5"]
scale = Vector2(3, 3)
scroll_scale = Vector2(0.1, 0)
scroll_offset = Vector2(-7888, -792)
repeat_size = Vector2(2688, 0)
repeat_times = 3
follow_viewport = false

[node name="Bg3" type="Sprite2D" parent="BackgroundF3-F5/Near"]
position = Vector2(8.666667, 950.3333)
scale = Vector2(2, 2)
texture = ExtResource("11_alxcq")

[node name="EncounterController" type="Node" parent="."]
script = ExtResource("1_qvqnh")
charge_scene = ExtResource("2_n8wkn")
world_scene_paths = Array[String](["res://scenes/world/World1.tscn", "res://scenes/world/World2.tscn", "res://scenes/world/World3.tscn"])
ascension_sockets_root_path = NodePath("../AscensionSocket")
add_scene = ExtResource("3_61woi")
add_enemy_pool = Array[PackedScene]([ExtResource("3_61woi"), ExtResource("3_necro"), ExtResource("3_rogue"), ExtResource("3_mage")])
golem_scene = ExtResource("3_golem")
start_on_ready = false

[node name="FloorProgressionController" type="Node" parent="."]
script = ExtResource("4_yjglx")
steam_elevator_path = NodePath("")
floor_progression_mode = 1
floor_ceiling_y = PackedFloat32Array(0)
boss_start_x = 49377.0
chest_scene = ExtResource("5_mi5e1")
dice_choice_ui_path = NodePath("../DiceModifierChoice")
chest_spawn_fallback_path = NodePath("../Arena/ChestSpawns")
enable_orb_flight = false
enable_world1_floor3_transition = true
enable_world1_boss_arena_camera = true
world1_boss_camera_left = 47009.27
world1_boss_camera_right = 54085.6
world1_boss_camera_top = 10500.0
world1_boss_camera_bottom = 14250.0
world1_boss_camera_live_tuning = true
world1_boss_camera_use_manual_center = true
world1_boss_camera_center = Vector2(50867.07, 12371.58)
world1_boss_camera_min_zoom = 0.77

[node name="FloorEnemySpawner" type="Node" parent="."]
script = ExtResource("6_imtto")
enemy_scenes = Array[PackedScene]([ExtResource("3_61woi"), ExtResource("3_necro"), ExtResource("3_rogue"), ExtResource("3_mage")])
golem_scene = ExtResource("3_golem")
floor_activation_mode = 1
enable_strict_ledge_guard = true

[node name="Arena" parent="." instance=ExtResource("7_ej262")]

[node name="ArenaCenter" parent="Arena" index="3"]
position = Vector2(0, -3200)

[node name="Player" parent="." instance=ExtResource("12_gp4b6")]
position = Vector2(-1346, 1545)

[node name="InteractArea" parent="Player" index="2"]
position = Vector2(-11.56, 51.15)

[node name="CollisionShape2D" parent="Player/InteractArea" index="0"]
position = Vector2(11.555, -51.155)

[node name="Camera2D" parent="Player" index="10"]
limit_top = -4500
limit_right = 65360
limit_bottom = 14535

[node name="PlayerCameraController" parent="Player" index="30"]
enable_progressive_limits = false

[node name="BossArenaCamera" type="Camera2D" parent="."]
position = Vector2(50849, 12767.5)
enabled = false
limit_left = 49377
limit_top = 11000
limit_right = 52321
limit_bottom = 14535

[node name="Boss" parent="." instance=ExtResource("13_1srhu")]
position = Vector2(50759, 12794)
collision_mask = 3

[node name="AcensionCharge" parent="." instance=ExtResource("2_n8wkn")]
position = Vector2(51397, 12593)

[node name="AscensionSocket" type="Node2D" parent="."]
z_index = 2
position = Vector2(50749, 16927)

[node name="AscensionSocketA" parent="AscensionSocket" instance=ExtResource("14_usd6y")]
position = Vector2(-562, -3995)
scale = Vector2(1, 1)

[node name="AscensionSocketB" parent="AscensionSocket" instance=ExtResource("14_usd6y")]
position = Vector2(625, -4001)
scale = Vector2(1, 1)

[node name="UI" parent="." instance=ExtResource("16_thmre")]

[node name="PlayerHUDCluster" parent="UI/ScreenRoot/HUDRoot/BottomRight" index="0"]
offset_left = -414.8
offset_top = -175.375
offset_right = -16.775
offset_bottom = -16.775
style = ExtResource("17_80gak")

[node name="PlayerHUDWiring" parent="UI/ScreenRoot/HUDRoot" index="4"]
player_path = NodePath("../../../../Player")
combat_path = NodePath("../../../../Player/Combat")

[node name="EncounterHUDWiring" parent="UI/ScreenRoot/HUDRoot" index="5"]
floor_controller_path = NodePath("../../../../FloorProgressionController")
boss_path = NodePath("../../../../Boss")

[node name="ColdNightOverlay" type="ColorRect" parent="UI/ScreenRoot/HUDRoot" index="6"]
z_index = -8
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.52, 0.62, 0.85, 0.18)

[node name="Floor3TransitionFade" type="ColorRect" parent="UI/ScreenRoot/HUDRoot" index="7"]
visible = false
z_index = 400
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="LowHealthPostFX" parent="UI/ScreenRoot/HUDRoot/PlayerDamageFeedback" index="0"]
layout_mode = 3

[node name="LowHealthBorder" parent="UI/ScreenRoot/HUDRoot/PlayerDamageFeedback" index="1"]
layout_mode = 3

[node name="HitFlash" parent="UI/ScreenRoot/HUDRoot/PlayerDamageFeedback" index="2"]
layout_mode = 3

[node name="SnowVFX" type="Node2D" parent="."]
z_index = 8

[node name="SnowParticlesLight" type="CPUParticles2D" parent="SnowVFX"]
position = Vector2(25000, -300)
amount = 240
texture = ExtResource("19_snowtx")
lifetime = 9.0
preprocess = 2.0
randomness = 0.45
emission_shape = 3
emission_rect_extents = Vector2(34000, 1200)
direction = Vector2(0, 1)
spread = 16.0
gravity = Vector2(0, 35)
initial_velocity_min = 65.0
initial_velocity_max = 110.0
angular_velocity_min = -12.0
angular_velocity_max = 12.0
damping_min = 0.5
damping_max = 2.0
scale_amount_min = 0.025
scale_amount_max = 0.07
color = Color(1, 1, 1, 0.46)

[node name="SnowParticlesMid" type="CPUParticles2D" parent="SnowVFX"]
position = Vector2(25000, -380)
amount = 200
texture = ExtResource("19_snowtx")
lifetime = 7.0
preprocess = 2.0
randomness = 0.35
emission_shape = 3
emission_rect_extents = Vector2(34000, 1400)
direction = Vector2(0.16, 1)
spread = 12.0
gravity = Vector2(8, 42)
initial_velocity_min = 105.0
initial_velocity_max = 170.0
angular_velocity_min = -20.0
angular_velocity_max = 20.0
damping_min = 1.0
damping_max = 4.0
scale_amount_min = 0.035
scale_amount_max = 0.09
color = Color(1, 1, 1, 0.56)

[node name="DiceModifierChoice" parent="." instance=ExtResource("18_alxcq")]

[editable path="Arena"]
[editable path="Player"]
[editable path="Player/Visual/Body3DView"]
[editable path="Boss"]
[editable path="AcensionCharge"]
[editable path="AscensionSocket/AscensionSocketA"]
[editable path="AscensionSocket/AscensionSocketB"]
[editable path="UI"]
[editable path="UI/DeathOverlay/RunSummaryPanel"]
[editable path="UI/VictoryUI/Root/CardA"]
[editable path="UI/VictoryUI/Root/CardB"]
[editable path="UI/VictoryUI/Root/CardC"]
[editable path="UI/VictoryUI/Root/CardD"]
[editable path="UI/VictoryUI/Root/CardE"]
[editable path="DiceModifierChoice"]
[editable path="DiceModifierChoice/Root/CardA"]
[editable path="DiceModifierChoice/Root/CardB"]
[editable path="DiceModifierChoice/Root/CardC"]
[editable path="DiceModifierChoice/Root/CardD"]
[editable path="DiceModifierChoice/Root/CardE"]
